...
                    android:layout_gravity="bottom|left"
                    android:layout_weight="1"
                    android:hint="@string/credit_debit_card_hint"
                    android:importantForAccessibility="no">

                    <com.expedia.bookings.widget.NumberMaskEditText
                        android:id="@+id/edit_creditcard_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:nextFocusForward="@+id/edit_creditcard_exp_text_btn"
                        android:textSize="@dimen/traveler_input_text_size"
                        app:numberFormat="creditcard" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
...
                        android:id="@+id/edit_creditcard_exp_text_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:bufferType="spannable"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:nextFocusForward="@+id/edit_creditcard_cvv"
                        android:textSize="@dimen/traveler_input_text_size" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/material_edit_address_postal_code"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/address_zip_code_hint"
                    android:importantForAccessibility="no">

                    <com.expedia.bookings.widget.accessibility.AccessibleEditText
                        android:id="@+id/edit_address_postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:nextFocusForward="@+id/edit_name_on_card"
                        android:textSize="@dimen/traveler_input_text_size" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

...
                    android:id="@+id/edit_name_on_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edit_address_line_one"
                    android:textSize="@dimen/traveler_input_text_size" />

            </android.support.design.widget.TextInputLayout>

        </com.expedia.bookings.section.SectionBillingInfo>

...

        </LinearLayout>

    </LinearLayout>

    <com.expedia.bookings.section.SectionLocation
        android:id="@+id/section_location_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </com.expedia.bookings.section.SectionLocation>

...
