<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.expedia.bookings.widget.ScrollView
        android:id="@+id/checkout_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray100"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/scroll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingLeft="9dp"
            android:paddingRight="9dp">

            <FrameLayout
                android:id="@+id/summary_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@drawable/card_background">

            </FrameLayout>

            <com.expedia.bookings.widget.AccountButton
                android:id="@+id/login_widget"
                style="?attr/checkout_card_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/hint_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="9dp"
                    android:layout_weight="1"
                    android:background="@color/gray500" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/or"
                    android:textColor="@color/defaultTextColor" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="9dp"
                    android:layout_weight="1"
                    android:background="@color/gray500" />
            </LinearLayout>

            <com.expedia.bookings.widget.TravelerContactDetailsWidget
                android:id="@+id/main_contact_info_card_view"
                style="?attr/checkout_card_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

            <android.support.v7.widget.CardView
                style="@style/MaterialCardView"
                android:id="@+id/traveler_default_state_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:cardUseCompatPadding="true"
                android:visibility="gone">

                <com.expedia.bookings.widget.traveler.TravelerSummaryCard
                    android:id="@+id/traveler_default_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

            <ViewStub
                android:id="@+id/payment_info_card_view_stub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inflatedId="@+id/payment_info_card_view"
                android:layout_marginTop="12dp"
                android:layout="?attr/paymentWidgetLayout" />

            <FrameLayout
                android:id="@+id/coupon_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.expedia.bookings.widget.TextView
                android:id="@+id/legal_information_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="16dp"
                android:paddingLeft="1.5dp"
                android:paddingRight="1.5dp"
                android:textColor="@color/defaultTextColor"
                android:textSize="10sp" />

            <com.expedia.bookings.widget.TextView
                android:id="@+id/disclaimer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="1.5dp"
                android:paddingRight="1.5dp"
                android:textColor="@color/defaultTextColor"
                android:textSize="10sp"
                android:visibility="gone" />

            <com.expedia.bookings.widget.TextView
                android:id="@+id/deposit_policy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="1.5dp"
                android:paddingRight="1.5dp"
                android:textColor="@color/defaultTextColor"
                android:textSize="10sp"
                android:visibility="gone" />

            <Space
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </com.expedia.bookings.widget.ScrollView>

    <ViewStub
        android:id="@+id/traveler_presenter_stub"
        android:inflatedId="@+id/traveler_presenter"
        android:layout="?attr/traveler_presenter"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/material_checkout_background_color"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/slide_to_purchase_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/drop_shadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CCFFFFFF"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <com.expedia.bookings.widget.TextView
                android:id="@+id/purchase_total_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/primary_color"
                android:padding="8dp"
                android:textSize="@dimen/slide_to_purchase_price_text_size"
                android:gravity="center" />

            <com.expedia.bookings.widget.SlideToWidgetLL
                android:id="@+id/slide_to_purchase_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/slide_to_purchase_padding"
                android:layout_marginRight="@dimen/slide_to_purchase_padding"
                android:background="#00000000" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <com.expedia.bookings.widget.CheckoutToolbar
            android:id="@+id/checkout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/primary_color"
            android:minHeight="?attr/actionBarSize"
            app:titleTextAppearance="?attr/toolbar_title_style"
            app:contentInsetStartWithNavigation="0dp" />

        <View
            android:id="@+id/toolbar_dropshadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_dropshadow_height"
            android:background="@drawable/tb_shadow" />
    </LinearLayout>
</merge>
