...
        style="@style/HeaderTextAboveCardviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/traveler_select_additional" />

    <LinearLayout
        android:id="@+id/additional_traveler_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="vertical" />

    <com.expedia.bookings.widget.TextView
...
